--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>S7-L2</title>
   </head>
   <body>
+    <form id="form">
+      <span id="nameSpace">&nbsp;</span>
+      <br />
+      <input
+        type="text"
+        name="name"
+        id="name"
+        placeholder="Inserisci il tuo nome"
+      />
+      <button type="button" id="addName">AGGIUNGI</button>
+      <button type="button" id="removeName">RIMUOVI</button>
+    </form>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
