--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <button type="button" id="removeName">RIMUOVI</button>
     </form>
 
+    <br />
+    <br />
+    <br />
+
+    <p><span id="timeCounter">1</span> secondi di sessione aperta!</p>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
